--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -6,7 +6,7 @@
 
     <parent>
         <groupId>ua.lyashko</groupId>
-        <artifactId>privat</artifactId>
+        <artifactId>payment</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
